--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,31 @@
-.App {
-  text-align: center;
+/* Default scrollbar styles */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fff;
+  box-shadow: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  box-shadow: none;
+  background: #adb5bd;
+  border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00ffff;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background: radial-gradient(ellipse at bottom, #1b2735 0, #090a0f 100%); */
+  background: black !important;
+  height: 89.5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,16 +33,233 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.App {
+  font-family: "Roboto", sans-serif;
+  background: black !important;
+}
 .App-link {
   color: #61dafb;
 }
+.namelabel {
+  font-size: 34px;
+}
+#nameSlider .typed-cursor, .text-slider {
+  color: #ae00ff;
+}
+.typed-cursor {
+  color: white
+}
+#nameSlider .text-slider {
+  color: white
+}
+.myworkbtn {
+  background: #00ffff;
+  font-size: 14px;
+  border-radius: 20px;
+  border: none;
+  font-weight: 500;
+  padding: 0.5em 1em;
+  margin-top: 1em;
+}
+.myworkbtn:hover {
+  background: #ae00ff;
+  color: black;
+  transition: 0.4s;
+}
+.myworkbtnText {
+  text-decoration: none;
+  transition: 0.3s all;
+  font-size: 16px;
+  color: black;
+  background-clip: text;
+}
+.myworkbtnText:hover {
+  color: black;
+}
+.headerLabel {
+  font-size: 32px;
+  color: #ae00ff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+.brandName {
+  margin-left: 1.5em;
+  background: linear-gradient(to right, white, #00ffff);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.aboutInfo {
+  font-size: 17px;
+  text-align: justify;
+  margin-top: 1em;
+}
+.aboutInfo1 {
+  font-size: 19px;
+  margin-top: 1em;
+}
+.workInfoLabel {
+  font-size: 15px;
+  text-align: justify;
+  margin-top: 1em;
+}
+.pContainer {
+  background: white !important;
+  height: 100vh;
+  padding: 2em;
+}
+.techIcon {
+  width: 2rem;
+  height: 2rem;
+  margin: 0.5em;
+}
+.navbar {
+  height: 58px;
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  font-size: 1.2rem;
+}
+
+.nav-logo {
+  font-family: "Sansita Swashed", cursive;
+  text-decoration: none;
+  background: linear-gradient(to right, white, #00e1ff);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  margin-bottom: 17px;
+}
+
+.nav-links {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 20px;
+  list-style: none;
+}
+
+.nav-link {
+  text-decoration: none;
+  transition: 0.3s all;
+  font-size: 16px;
+  background-clip: text;
+}
+
+.nav-icon {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 638px) {
+  .navbar {
+    position: relative;
   }
-  to {
-    transform: rotate(360deg);
+
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: 58px;
+    left: -100%;
+    transition: 0.5s all;
+  }
+
+  .nav-links.active {
+    background: rgb(0, 0, 0);
+    left: 0;
+  }
+
+  .nav-item {
+    padding: 5px 0;
+  }
+
+  .nav-icon {
+    display: flex;
   }
 }
+.changeSVGcolor {
+  filter: invert(8%) sepia(100%) saturate(6481%) hue-rotate(246deg)
+    brightness(102%) contrast(143%);
+}
+@media only screen and (width < 768px) {
+  .aboutTitle {
+    margin-top: 1em;
+  }
+  .eduBlock {
+    margin-bottom: 4em;
+  }
+}
+.contactInputBox {
+  margin-right: 3em;
+  padding: 0.5em 8px;
+  border-radius: 5px;
+  border: 1px solid rgb(181, 192, 202);
+  font-size: 14px;
+  outline: none;
+  background: white;
+}
+.contactInputBox:focus {
+  background: #00ffff1f;
+  border-radius: 8px;
+  border: 1.5px solid rgb(117, 0, 192);
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
+}
+.contactInputBox::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+.contactbtn {
+  background: #00ffff;
+  font-size: 14px;
+  border-radius: 20px;
+  border: none;
+  font-weight: 500;
+  padding: 0.5em 1em;
+  margin-top: 1em;
+  width: 150px;
+}
+.contactbtn:hover, .circleWithLogo:hover {
+  background: #ae00ff;
+  color: white !important;
+}
+.errorMsg {
+  font-size: 12px;
+  color: red;
+}
+.labelForm {
+  font-size: 15px;
+}
+.contactLogos {
+  font-size: xx-large;
+  margin: 0.5em;
+}
+#navLogo a {
+  color: black;
+}
+.circleWithLogo {
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+  background: #00ffff8a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  margin: 0 1em;
+}
+.nav-logo, .nav-link { display:inline-block }
+.nav-link:after, .nav-logo:after {
+  display:block;
+  content: '';
+  border-bottom: solid 3px aqua;  
+  transform: scaleX(0);  
+  transition: transform 250ms ease-in-out;
+}
+.nav-logo:hover:after, .nav-link:hover:after { transform: scaleX(1); }
+.nav-logo.fromRight:after, .nav-link.fromRight:after { transform-origin:100% 50%; }
+.nav-logo.fromLeft:after, .nav-link.fromRight:after {  transform-origin:  0% 50%; }
